[gd_scene load_steps=7 format=2]

[ext_resource path="res://Asset/topdown-shooter/Tilesheet/tilesheet_complete.png" type="Texture" id=1]
[ext_resource path="res://Script/Base.gd" type="Script" id=2]
[ext_resource path="res://UI/Roboto_mono_40.tres" type="DynamicFont" id=3]
[ext_resource path="res://Scene/Team.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 1550, 270, 36, 36 )

[node name="Base" type="Area2D"]
position = Vector2( 541, 294 )
script = ExtResource( 2 )
player_color = Color( 0.0509804, 0.909804, 0.384314, 1 )
enemy_color = Color( 0.94902, 0.180392, 0.145098, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 25, 25 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = SubResource( 2 )

[node name="Team" parent="." instance=ExtResource( 4 )]

[node name="CaptureTimer" type="Timer" parent="."]
wait_time = 8.0
one_shot = true

[node name="Player" type="Label" parent="."]
margin_left = -70.0
margin_top = 2.0
margin_right = -30.0
margin_bottom = 55.0
custom_colors/font_color = Color( 0, 1, 0.388235, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "1"

[node name="Enemy" type="Label" parent="."]
margin_left = 33.0
margin_top = 2.0
margin_right = 73.0
margin_bottom = 55.0
custom_colors/font_color = Color( 1, 0.0431373, 0, 1 )
custom_colors/font_outline_modulate = Color( 0.0392157, 0.0392157, 0.0392157, 1 )
custom_fonts/font = ExtResource( 3 )
text = "2"
align = 2

[connection signal="body_entered" from="." to="." method="_on_Base_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Base_body_exited"]
[connection signal="timeout" from="CaptureTimer" to="." method="_on_CaptureTimer_timeout"]
